--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -51,7 +51,7 @@
 							Web Developer | Designer | Innovator
 						</p>	
 					</div>
-					<div class="col-lg-6 offset-lg-3 col-12">
+					<div class="col-md-8 offset-md-2 col-12">
 						<p class="lead mt-lg-4 mt-3 mb-5 fs20 m-fs-16 text-center">
 							A self-motivated IT professional with high knowledge and proficiency in JavaScript, HTML , CSS and mobile responsive web development, as well as strong skills and ability in writing clean and efficient code.
 						</p>
@@ -69,71 +69,83 @@
 				    	<img class="img-fluid" src="images/divider.png">
 				    </div>	
 				    <div class="row pt-lg-5 pt-4 mx-lg-5">
-				    	<div class="col-lg-4 col-12">
+				    	<div class="col-md-4 col-12">
 				    		<div class="card mb-4">
 				    			<img src="images/card-1.jpg">
 				    			<div class="card-body">
-				    				<h5 class="card-title">Random Quote Generator</h5>
-				    				<p class="card-text fs16">
-				    				I created a Random Quote Generator using HTML, CSS, Bootstrap and JavaScript. This helps you to access lots of inspiring quotes.</p>
-				    				<a href="https://rohitkotian27.github.io/Random_Quote_Generator" target="_blank" alias="Random-Quote-Generator" class="btn btn-info">View Now</a>
+				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-down btn_down"></div>Random Quote Generator</h5>
+				    				<div class="card_content">
+					    				<p class="card-text fs16">
+					    				I created a Random Quote Generator using HTML, CSS, Bootstrap and JavaScript. This helps you to access lots of inspiring quotes.</p>
+					    				<a href="https://rohitkotian27.github.io/Random_Quote_Generator" target="_blank" alias="Random-Quote-Generator" class="btn btn-info">View Now</a>
+					    			</div>	
 				    			</div>
 				    		</div>
 				    	</div>	
-				    	<div class="col-lg-4 col-12">
+				    	<div class="col-md-4 col-12">
 				    		<div class="card mb-4">
 				    			<img src="images/card-2.jpg">
 				    			<div class="card-body">
-				    				<h5 class="card-title">To-Do List</h5>
-				    				<p class="card-text fs16">
-				    					I created a To-Do List using HTML and JavaScript. Using this To-Do List one can keep a track of tasks that needs to completed.
-				    				</p>
-				    				<a href="https://rohitkotian27.github.io/To-Do-List" target="_blank" alias="To-Do-List" class="btn btn-info">View Now</a>
+				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-down btn_down"></div>To-Do List</h5>
+				    				<div class="card_content">
+					    				<p class="card-text fs16">
+					    					I created a To-Do List using HTML and JavaScript. Using this To-Do List one can keep a track of tasks that needs to completed.
+					    				</p>
+					    				<a href="https://rohitkotian27.github.io/To-Do-List" target="_blank" alias="To-Do-List" class="btn btn-info">View Now</a>
+					    			</div>	
 				    			</div>
 				    		</div>
 				    	</div>	
-				    	<div class="col-lg-4 col-12">
+				    	<div class="col-md-4 col-12">
 				    		<div class="card mb-4">
 				    			<img src="images/card-3.jpg">
 				    			<div class="card-body">
-				    				<h5 class="card-title">Website Template</h5>
-				    				<p class="card-text fs16">
-				    				I learnt the usage of pre-defined classes in Bootstrap and created a Base Template using HTML, CSS, Javascript & Bootstrap 4.</p>
-				    				<a href="https://rohitkotian27.github.io/MyTemplate" target="_blank" alias="MyTemplate" class="btn btn-info">View Now</a>
+				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-down btn_down"></div>Website Template</h5>
+				    				<div class="card_content">
+					    				<p class="card-text fs16">
+					    				I learnt the usage of pre-defined classes in Bootstrap and created a Base Template using HTML, CSS, Javascript & Bootstrap 4.</p>
+					    				<a href="https://rohitkotian27.github.io/MyTemplate" target="_blank" alias="MyTemplate" class="btn btn-info">View Now</a>
+					    			</div>	
 				    			</div>
 				    		</div>
 				    	</div>
-				    	<div class="col-lg-4 col-12">
+				    	<div class="col-md-4 col-12">
 				    		<div class="card mb-4">
 				    			<img src="images/card-4.jpg">
 				    			<div class="card-body">
-				    				<h5 class="card-title">Color Guessing Game</h5>
-				    				<p class="card-text fs16">
-				    					I created a Color Guessing Game using HTML, CSS & Javascript. Here the user has to guess which color may appear on the Screen.
-				    				</p>
-				    				<a href="https://rohitkotian27.github.io/Color_Guessing_Game" target="_blank" alias="Color-Guessing-Game/" class="btn btn-info">View Now</a>
+				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-down btn_down"></div>Color Guessing Game</h5>
+				    				<div class="card_content">
+					    				<p class="card-text fs16">
+					    					I created a Color Guessing Game using HTML, CSS & Javascript. Here the user has to guess which color may appear on the Screen.
+					    				</p>
+					    				<a href="https://rohitkotian27.github.io/Color_Guessing_Game" target="_blank" alias="Color-Guessing-Game/" class="btn btn-info">View Now</a>
+					    			</div>	
 				    			</div>
 				    		</div>
 				    	</div>	
-				    	<div class="col-lg-4 col-12">
+				    	<div class="col-md-4 col-12">
 				    		<div class="card mb-4">
 				    			<img src="images/card-5.jpg">
 				    			<div class="card-body">
-				    				<h5 class="card-title">Alarm Clock</h5>
-				    				<p class="card-text fs16">
-				    					I created an Alarm Clock using JavaScript. Using this one can set the time and preselected sound will be played at the set time.
-				    				</p>
-				    				<a href="https://rohitkotian27.github.io/AlarmClockUsingJs" target="_blank" alias="AlarmClockUsingJs" class="btn btn-info">View Now</a>
+				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-down btn_down"></div>Alarm Clock</h5>
+				    				<div class="card_content">
+					    				<p class="card-text fs16">
+					    					I created an Alarm Clock using JavaScript. Using this one can set the time and preselected sound will be played at the set time.
+					    				</p>
+					    				<a href="https://rohitkotian27.github.io/AlarmClockUsingJs" target="_blank" alias="AlarmClockUsingJs" class="btn btn-info">View Now</a>
+					    			</div>	
 				    			</div>
 				    		</div>
 				    	</div>	
-				    	<div class="col-lg-4 col-12">
+				    	<div class="col-md-4 col-12">
 				    		<div class="card mb-4">
 				    			<img src="images/card-6.jpg">
 				    			<div class="card-body">
-				    				<h5 class="card-title">Food You Love</h5>
-				    				<p class="card-text fs16">I created a Website for Food Lovers. Here you can find variety of food products and the information on the same.</p>
-				    				<a href="https://rohitkotian27.github.io/FoodYouLove" target="_blank" alias="FoodYouLove" class="btn btn-info">View Now</a>
+				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-down btn_down"></div>Food You Love</h5>
+				    				<div class="card_content">
+					    				<p class="card-text fs16">I created a Website for Food Lovers. Here you can find variety of food products that you love and the information on the same.</p>
+					    				<a href="https://rohitkotian27.github.io/FoodYouLove" target="_blank" alias="FoodYouLove" class="btn btn-info">View Now</a>
+				    				</div>
 				    			</div>
 				    		</div>
 				    	</div>	
@@ -151,10 +163,10 @@
 				    	<img class="img-fluid" src="images/divider.png">
 				  </div>
 				  <div class="row pt-lg-5 pt-4 mx-lg-5">
-				  	<div class="col-lg-5 offset-lg-1 col-12">
+				  	<div class="col-md-5 offset-lg-1 col-12">
 				  		<img class="img-fluid mob_img mb-5 mb-lg-0" src="images/Rk_About.png">
 				  	</div>
-				  	<div class="col-lg-6 col-12">
+				  	<div class="col-md-6 col-12">
 				  		<p class="m-fs-16">Computer Engineer by profession and always striving to enhance my career by "Learning Something New Every Single Day".</p>
 
 				  		<p class="m-fs-16">I am currently working at Accenture as a Web Developer. The reason behind choosing Web Development as a field of interest is because User Interface is something that makes everyone's life easy, so building one seems to be interesting and fun. I constantly try to keep myself updated regarding the knowledge I require to work in this field. The skills I have excelled are HTML, CSS, Javascript, Bootstrap, Sass, Python and Jquery. Looking forward to working on some new technologies.</p>
@@ -177,7 +189,7 @@
 				    	<img class="img-fluid" src="images/divider.png">
 				    </div>
 				    <div class="row mx-lg-5 pt-lg-5 pt-4 px-lg-5 px-0">
-				    	<div class="col-lg-6 col-12 mb-3">
+				    	<div class="col-md-6 col-12 mb-3">
 				    		<h3>Contact Details</h3>
 				    		<p class="m-fs-16">Please feel free to contact me for queries related to any ideas that needs implementation.</p>
 				    		<p class="mb-2 m-fs-16"><span class="fa fa-envelope fa_size">&nbsp;&nbsp;</span>Email : rohitkotian07@gmail.com</p>
@@ -185,12 +197,12 @@
 				    		<p class="mb-2 m-fs-16"><span class="fa fa-github fa_size">&nbsp;&nbsp;</span>Github : <a href="https://github.com/RohitKotian27" target="_blank">github.com/RohitKotian27</a></p>
 				    		<p></p>
 				    	</div>
-				    	<div class="col-lg-6 col-12">
+				    	<div class="col-md-6 col-12">
 				    		<form class="form-inline">
 				    			<input class="w-100 mb-3 p-2 customInput m-fs-16" maxlength="30" type="text" name="Name" placeholder="Your name" required>
-				    			<input class="w-100 mb-3 p-2 customInput m-fs-16" maxlength="10" type="text" name="number" placeholder="Mobile number" required>
-				    			<input class="w-100 mb-3 p-2 customInput m-fs-16" maxlength="40" type="email" name="email" placeholder="Email-id" required>
-				    			<textarea class="w-100 mb-3 p-2 customText m-fs-16" size="50" maxlength="100" type="text" name="text" placeholder="Your message" required></textarea>
+				    			<input class="w-100 mb-3 p-2 customInput m-fs-16" maxlength="10" type="number" name="number" placeholder="Mobile number" required>
+				    			<input class="w-100 mb-3 p-2 customInput m-fs-16" maxlength="30" type="email" name="email" placeholder="Email-id" required>
+				    			<textarea class="w-100 mb-3 p-2 customText m-fs-16" maxlength="100" type="text" name="text" placeholder="Your message" required></textarea>
 				    			<div class="w-100 mb-3">
 				    				<input type="checkbox" class="tick" name="checked" id="checked">
 				    				<label class="d-inline m-fs-16">Any message ?</label>
@@ -208,11 +220,11 @@
 			<div class="row bgLastSection py-5">
 				<div class="col-12 mx-1600">
 					<div class="row mx-lg-5 px-lg-5 px-0">
-						<div class="col-lg-4 col-12 text-white mb-3 mb-lg-0">
+						<div class="col-md-4 col-12 text-white mb-3 mb-lg-0">
 							<p class="fs24 m-fs-20 text-center mb-lg-3 mb-2"><span class="fa fa-home">&nbsp;&nbsp;</span>LOCATION</p>
 							<p class="text-center m-fs-16 px-5 px-lg-0">C-3 Narayan Smruti, Opposite Green Park, Gandhinagar, Dombivali, Mumbai.</p>
 						</div>
-						<div class="col-lg-4 col-12 text-white mb-3 mb-lg-0">
+						<div class="col-md-4 col-12 text-white mb-3 mb-lg-0">
 							<p class="fs24 m-fs-20 text-center mb-lg-3 mb-2">CONNECT WITH ME</p>
 							<p class="text-center">
 								<a href="https://www.facebook.com/rohit.kotian.359" alias="facebook" target="_blank"><span class="fa fa-facebook-square fa-2x text-white">&nbsp;</span></a>
@@ -221,7 +233,7 @@
 								<a href="https://api.whatsapp.com/send?phone=+918451869020" alias="whatsapp" target="_blank"><span class="fa fa fa-whatsapp fa-2x text-white">&nbsp;</span></a>
 							</p>
 						</div>
-						<div class="col-lg-4 col-12 text-white">
+						<div class="col-md-4 col-12 text-white">
 							<p class="fs24 m-fs-20 text-center mb-lg-3 mb-2">ANY IDEAS?</p>
 							<p class="text-center m-fs-16 px-5 px-lg-0">Please feel free to contact me so that I can help you in implementing your ideas.</p>
 						</div>
