Fixed Project Section Layout Issue

--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -28,12 +28,12 @@
 		  <div class="collapse navbar-collapse w-100" id="navbarSupportedContent">
 		    <ul class="navbar-nav ml-auto">
 		      <li class="nav-item mx-lg-2">
-		        <a class="nav-link text-white" href="#Portfolio">PORTFOLIO</a>
+		        <a class="nav-link text-white" href="#Projects">PROJECTS</a>
 		      <li class="nav-item mx-lg-2">
 		        <a class="nav-link text-white" href="#About">ABOUT</a>
 		      </li>
 		      <li class="nav-item mx-lg-2">
-		        <a class="nav-link text-white" href="#Contact">CONTACT</a>
+		        <a class="nav-link text-white" href="#GetInTouch">GET IN TOUCH</a>
 		      </li>
 		    </ul>
 		  </div>
@@ -60,12 +60,12 @@
 			</div>	
 		</div>
 	</section>
-	<section id="Portfolio">
+	<section id="Projects">
 		<div class="container-fluid">
 			<div class="row bg-Section2 py-5">
-				<div class="col-12 mx-1600">
+				<div class="col-12 col-md-11 offest-md-1 mx-1600">
 					<div class="text-center header_Section">	
-						<h1 class="m-fs-35 pb-lg-3 pb-1 heading">PORTFOLIO</h1>
+						<h1 class="m-fs-35 pb-lg-3 pb-1 heading">PROJECTS</h1>
 				    	<img class="img-fluid" src="images/divider.png">
 				    </div>	
 				    <div class="row pt-lg-5 pt-4 mx-lg-5">
@@ -89,7 +89,7 @@
 				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-down btn_down"></div>To-Do List</h5>
 				    				<div class="card_content">
 					    				<p class="card-text fs16">
-					    					I created a To-Do List using HTML and JavaScript. Using this To-Do List one can keep a track of tasks that needs to completed.
+					    					I created a To-Do List using HTML and JavaScript. Using this To-Do one can keep a track of tasks that needs to completed.
 					    				</p>
 					    				<a href="https://rohitkotian27.github.io/To-Do-List" target="_blank" alias="To-Do-List" class="btn btn-info">View Now</a>
 					    			</div>	
@@ -116,7 +116,7 @@
 				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-down btn_down"></div>Color Guessing Game</h5>
 				    				<div class="card_content">
 					    				<p class="card-text fs16">
-					    					I created a Color Guessing Game using HTML, CSS & Javascript. Here the user has to guess which color may appear on the Screen.
+					    					I created a Color Guessing Game using HTML, CSS & JS. Here the user has to guess which color may appear on the Screen.
 					    				</p>
 					    				<a href="https://rohitkotian27.github.io/Color_Guessing_Game" target="_blank" alias="Color-Guessing-Game/" class="btn btn-info">View Now</a>
 					    			</div>	
@@ -130,7 +130,7 @@
 				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-down btn_down"></div>Alarm Clock</h5>
 				    				<div class="card_content">
 					    				<p class="card-text fs16">
-					    					I created an Alarm Clock using JavaScript. Using this one can set the time and preselected sound will be played at the set time.
+					    					I created an Alarm Clock using JavaScript. Using this one can set the time and default sound will be played at the set time.
 					    				</p>
 					    				<a href="https://rohitkotian27.github.io/AlarmClockUsingJs" target="_blank" alias="AlarmClockUsingJs" class="btn btn-info">View Now</a>
 					    			</div>	
@@ -163,10 +163,10 @@
 				    	<img class="img-fluid" src="images/divider.png">
 				  </div>
 				  <div class="row pt-lg-5 pt-4 mx-lg-5">
-				  	<div class="col-md-5 offset-lg-1 col-12">
-				  		<img class="img-fluid mob_img mb-5 mb-lg-0" src="images/Rk_About.png">
+				  	<div class="col-md-6 col-12 text-right">
+				  		<img class="img-fluid mob_img mb-5 mb-md-0 mr-md-5" src="images/Rk_About.png">
 				  	</div>
-				  	<div class="col-md-6 col-12">
+				  	<div class="col-md-6 col-12 h-100">
 				  		<p class="m-fs-16">Computer Engineer by profession and always striving to enhance my career by "Learning Something New Every Single Day".</p>
 
 				  		<p class="m-fs-16">I am currently working at Accenture as a Web Developer. The reason behind choosing Web Development as a field of interest is because User Interface is something that makes everyone's life easy, so building one seems to be interesting and fun. I constantly try to keep myself updated regarding the knowledge I require to work in this field. The skills I have excelled are HTML, CSS, Javascript, Bootstrap, Sass, Python and Jquery. Looking forward to working on some new technologies.</p>
@@ -180,7 +180,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="Contact">
+	<section id="GetInTouch">
 		<div class="container-fluid">
 			<div class="row bg-Section2 py-5">
 				<div class="col-12 mx-1600">
@@ -202,6 +202,7 @@
 				    			<input class="w-100 mb-3 p-2 customInput m-fs-16" maxlength="30" type="text" name="Name" placeholder="Your name" required>
 				    			<input class="w-100 mb-3 p-2 customInput m-fs-16" maxlength="10" type="number" name="number" placeholder="Mobile number" required>
 				    			<input class="w-100 mb-3 p-2 customInput m-fs-16" maxlength="30" type="email" name="email" placeholder="Email-id" required>
+				    			<input class="w-100 mb-3 p-2 customInput m-fs-16" maxlength="30" type="text" name="Name" placeholder="Organization" required>
 				    			<textarea class="w-100 mb-3 p-2 customText m-fs-16" maxlength="100" type="text" name="text" placeholder="Your message" required></textarea>
 				    			<div class="w-100 mb-3">
 				    				<input type="checkbox" class="tick" name="checked" id="checked">
@@ -247,5 +248,4 @@
 	</footer>
 </body>
 </html>
-
 <!-- My Portfolio Rkrocks -->
