--- a/To-Do-List/index.html
+++ b/To-Do-List/index.html
@@ -20,10 +20,12 @@
 			<div class="col-12">
 				<div class="jumbotron mt-3">
 					<h1 class="text-center">Welcome to the <span class="noWrap">To Do List</span></h1>
-					<p class="text-center sub_content mt-3 mb-0">A place where you can keep a track of all the activities you need to perform for the day.</p>
+					<p class="text-center sub_content mt-3 mb-0">A place where you can keep a track of all the tasks you need to perform for the day.</p>
+					<p class="text-center green sub_content mt-3 mb-0">Click the item to mark it as complete.</p>
+					<p class="text-center white sub_content mt-3 mb-0 burgundy">Click the "<span class="fa fa-trash-o flt_none sub_content burgundy"></span>" icon to remove the item from your list.</p>
 				</div>
 				<div class="myform text-center">
-					<input type="text" class="inp1" name="task" placeholder="Enter task to be performed" size="30" maxlength="30" required>
+					<input type="text" class="inp1" name="task" maxlength="30" placeholder="Enter task to be performed" size="30" required>
 					<button class="btn ml-lg-1 mb-lg-1 mt-3 mt-lg-0 myBtn">Add!</button>
 				</div>
 				<div class="myList mt-lg-2">&nbsp;</div>
@@ -32,4 +34,4 @@
 	</div>
 </body>
 </html>
-<!-- This is code is written by RKrocks -->
+<!-- This is code is written by Rohit Kotian -->
