--- a/To-Do-List/index.html
+++ b/To-Do-List/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>To Do List</title>
+	<title>To-Do List</title>
 	<meta name="viewport" content="width=device-width">
+	<meta charset="UTF-8">
+	<meta name="description" content="A place where you can keep a track of all the tasks you need to perform for the day">
+	<meta name="keywords" content="To Do list, Work to do, Todos">
+	<meta name="author" content="Rohit Kotian">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script
