Working on the silder function
SLider Functionality Updates

--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -70,82 +70,82 @@
 				    </div>	
 				    <div class="row pt-lg-5 pt-4 mx-lg-5">
 				    	<div class="col-md-4 col-12">
-				    		<div class="card mb-4">
+				    		<div class="card mb-4 position-relative">
 				    			<img src="images/card-1.jpg">
-				    			<div class="card-body">
-				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-down btn_down"></div>Random Quote Generator</h5>
-				    				<div class="card_content">
+				    			<div class="card_content position-absolute">
 					    				<p class="card-text fs16">
 					    				I created a Random Quote Generator using HTML, CSS, Bootstrap and JavaScript. This helps you to access lots of inspiring quotes.</p>
-					    				<a href="https://rohitkotian27.github.io/Random_Quote_Generator" target="_blank" alias="Random-Quote-Generator" class="btn btn-info">View Now</a>
-					    			</div>	
+					    				<a href="https://rohitkotian27.github.io/Random_Quote_Generator" target="_blank" alias="Random-Quote-Generator" class="btn btn-block">View Now</a>
+					    		</div>
+				    			<div class="card-body">
+				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-up btn_down"></div>Random Quote Generator</h5>	
 				    			</div>
 				    		</div>
 				    	</div>	
 				    	<div class="col-md-4 col-12">
-				    		<div class="card mb-4">
+				    		<div class="card mb-4 position-relative">
 				    			<img src="images/card-2.jpg">
-				    			<div class="card-body">
-				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-down btn_down"></div>To-Do List</h5>
-				    				<div class="card_content">
+				    			<div class="card_content position-absolute">
 					    				<p class="card-text fs16">
 					    					I created a To-Do List using HTML and JavaScript. Using this To-Do one can keep a track of tasks that needs to completed.
 					    				</p>
-					    				<a href="https://rohitkotian27.github.io/To-Do-List" target="_blank" alias="To-Do-List" class="btn btn-info">View Now</a>
+					    				<a href="https://rohitkotian27.github.io/To-Do-List" target="_blank" alias="To-Do-List" class="btn btn-block">View Now</a>
 					    			</div>	
+				    			<div class="card-body">
+				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-up btn_down"></div>To-Do List</h5>
 				    			</div>
 				    		</div>
 				    	</div>	
 				    	<div class="col-md-4 col-12">
-				    		<div class="card mb-4">
+				    		<div class="card mb-4 position-relative">
 				    			<img src="images/card-3.jpg">
-				    			<div class="card-body">
-				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-down btn_down"></div>Website Template</h5>
-				    				<div class="card_content">
+				    			<div class="card_content position-absolute">
 					    				<p class="card-text fs16">
 					    				I learnt the usage of pre-defined classes in Bootstrap and created a Base Template using HTML, CSS, Javascript & Bootstrap 4.</p>
-					    				<a href="https://rohitkotian27.github.io/MyTemplate" target="_blank" alias="MyTemplate" class="btn btn-info">View Now</a>
+					    				<a href="https://rohitkotian27.github.io/MyTemplate" target="_blank" alias="MyTemplate" class="btn btn-block">View Now</a>
 					    			</div>	
+				    			<div class="card-body">
+				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-up btn_down"></div>Website Template</h5>
 				    			</div>
 				    		</div>
 				    	</div>
 				    	<div class="col-md-4 col-12">
-				    		<div class="card mb-4">
+				    		<div class="card mb-4 position-relative">
 				    			<img src="images/card-4.jpg">
-				    			<div class="card-body">
-				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-down btn_down"></div>Color Guessing Game</h5>
-				    				<div class="card_content">
+				    			<div class="card_content position-absolute">
 					    				<p class="card-text fs16">
 					    					I created a Color Guessing Game using HTML, CSS & JS. Here the user has to guess which color may appear on the Screen.
 					    				</p>
-					    				<a href="https://rohitkotian27.github.io/Color_Guessing_Game" target="_blank" alias="Color-Guessing-Game/" class="btn btn-info">View Now</a>
-					    			</div>	
+					    				<a href="https://rohitkotian27.github.io/Color_Guessing_Game" target="_blank" alias="Color-Guessing-Game/" class="btn btn-block">View Now</a>
+					    			</div>
+				    			<div class="card-body">
+				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-up btn_down"></div>Color Guessing Game</h5>	
 				    			</div>
 				    		</div>
 				    	</div>	
 				    	<div class="col-md-4 col-12">
-				    		<div class="card mb-4">
+				    		<div class="card mb-4 position-relative">
 				    			<img src="images/card-5.jpg">
-				    			<div class="card-body">
-				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-down btn_down"></div>Alarm Clock</h5>
-				    				<div class="card_content">
+				    			<div class="card_content position-absolute">
 					    				<p class="card-text fs16">
 					    					I created an Alarm Clock using JavaScript. Using this one can set the time and default sound will be played at the set time.
 					    				</p>
-					    				<a href="https://rohitkotian27.github.io/AlarmClockUsingJs" target="_blank" alias="AlarmClockUsingJs" class="btn btn-info">View Now</a>
-					    			</div>	
+					    				<a href="https://rohitkotian27.github.io/AlarmClockUsingJs" target="_blank" alias="AlarmClockUsingJs" class="btn btn-block">View Now</a>
+					    			</div>
+				    			<div class="card-body">
+				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-up btn_down"></div>Alarm Clock</h5>	
 				    			</div>
 				    		</div>
 				    	</div>	
 				    	<div class="col-md-4 col-12">
-				    		<div class="card mb-4">
+				    		<div class="card mb-4 position-relative">
 				    			<img src="images/card-6.jpg">
-				    			<div class="card-body">
-				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-down btn_down"></div>Food You Love</h5>
-				    				<div class="card_content">
+				    			<div class="card_content position-absolute">
 					    				<p class="card-text fs16">I created a Website for Food Lovers. Here you can find variety of food products that you love and the information on the same.</p>
-					    				<a href="https://rohitkotian27.github.io/FoodYouLove" target="_blank" alias="FoodYouLove" class="btn btn-info">View Now</a>
-				    				</div>
+					    				<a href="https://rohitkotian27.github.io/FoodYouLove" target="_blank" alias="FoodYouLove" class="btn btn-block">View Now</a>
+				    			</div>
+				    			<div class="card-body">
+				    				<h5 class="card-title mb-0"><div class="fa fa-chevron-up btn_down"></div>Food You Love</h5>
 				    			</div>
 				    		</div>
 				    	</div>	
@@ -248,4 +248,5 @@
 	</footer>
 </body>
 </html>
+
 <!-- My Portfolio Rkrocks -->
