--- a/Random_Quote_Generator/index.html
+++ b/Random_Quote_Generator/index.html
@@ -22,7 +22,8 @@
             <div class="position-absolute col-12 h-100 w-100 imgOverlay">
              &nbsp;
             </div>
-            <img src="images/Background.png" class="image" alt="">
+            <img src="images/Background.png" class="image d-lg-block d-none" alt="">
+            <img src="images/Background_mobile.jpg" class="d-block d-lg-none" alt="">
             <div class="position-absolute text-center w-100 mt-5">
               <h1 class="display-4 ftcolor mt-5 mb-4 center_text mob_font"><span class="blocker">Welcome to</span> Random <span class="mob_blocker">"Quote"</span> <span class="mob_blocker">Generator</span></h1>
               <div class="center_text">
