--- a/Random_Quote_Generator/index.html
+++ b/Random_Quote_Generator/index.html
@@ -19,16 +19,16 @@
       <div class="row no-gutters">
         <div class="col-12">
           <div class="row position-relative no-gutters">
-            <div class="position-absolute col-12 h-100 w-100 imgOverlay">
+            <div class="position-absolute col-12 h-100 w-100 imgOverlay d-lg-block d-none">
              &nbsp;
             </div>
-            <img src="images/Background.png" class="image d-lg-block d-none" alt="">
-            <img src="images/Background_mobile.jpg" class="d-block d-lg-none" alt="">
+            <img src="images/Background.png" class="image img-resp d-lg-block d-none" alt="">
+            <img src="images/Background_mobile.jpg" class="d-block img-resp d-lg-none" alt="">
             <div class="position-absolute text-center w-100 mt-5">
               <h1 class="display-4 ftcolor mt-5 mb-4 center_text mob_font"><span class="blocker">Welcome to</span> Random <span class="mob_blocker">"Quote"</span> <span class="mob_blocker">Generator</span></h1>
               <div class="center_text">
               <button class="btn custom_btn mt-3 mb-lg-5 mb-1">Get Quote Now!</button>
-              <h3 id="quote" class="mt-lg-4 mt-3 px-4 mx-lg-5 ftcolor"></h3>
+              <h3 id="quote" class="mt-4 px-4 mx-lg-5 ftcolor"></h3>
             </div>
             </div>
           </div>
