--- a/Random_Quote_Generator/index.html
+++ b/Random_Quote_Generator/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+	<meta name="description" content="A place where you can access multiple inpiring quotes.">
+	<meta name="keywords" content="Motivational Quotes, Inspiring Quotes, Quote Generator">
+	<meta name="author" content="Rohit Kotian">
   <title>Random Quote Generator</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script
