--- a/To-Do-List/index.html
+++ b/To-Do-List/index.html
@@ -25,8 +25,8 @@
 				<div class="jumbotron mt-3">
 					<h1 class="text-center">Welcome to the <span class="noWrap">To Do List</span></h1>
 					<p class="text-center sub_content mt-3 mb-0">A place where you can keep a track of all the tasks you need to perform for the day.</p>
-					<p class="text-center green sub_content mt-3 mb-0">Click the item to mark it as complete.</p>
-					<p class="text-center white sub_content mt-3 mb-0 burgundy">Click the "<span class="fa fa-trash-o flt_none sub_content burgundy"></span>" icon to remove the item from your list.</p>
+					<p class="text-center green sub_content mt-lg-3 mt-2 mb-0">Double click on an item to mark it as complete.</p>
+					<p class="text-center white sub_content mt-lg-3 mt-2 mb-0 burgundy">Click the "<span class="fa fa-trash-o flt_none sub_content burgundy"></span>" icon to remove the item from your list.</p>
 				</div>
 				<div class="myform text-center">
 					<input type="text" class="inp1" name="task" maxlength="30" placeholder="Enter task to be performed" size="30" required>
