--- a/Random_Quote_Generator/index.html
+++ b/Random_Quote_Generator/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
-	<meta name="description" content="A place where you can access multiple inpiring quotes.">
+	<meta name="description" content="A place where you can access multiple inspiring quotes.">
 	<meta name="keywords" content="Motivational Quotes, Inspiring Quotes, Quote Generator">
 	<meta name="author" content="Rohit Kotian">
   <title>Random Quote Generator</title>
